--- a/UnB2013/PVC/ProjetoFinal/ProjetoFinal/QtClasses/UI/UserInterface.ui
+++ b/UnB2013/PVC/ProjetoFinal/ProjetoFinal/QtClasses/UI/UserInterface.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>923</width>
-    <height>702</height>
+    <width>851</width>
+    <height>510</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,55 +17,99 @@
    <widget class="QPlainTextEdit" name="logText">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>380</y>
+      <x>200</x>
+      <y>330</y>
       <width>521</width>
       <height>101</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>290</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>video original</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>290</y>
+      <width>121</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>video processado</string>
     </property>
    </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>0</y>
-      <width>681</width>
-      <height>371</height>
+      <y>60</y>
+      <width>168</width>
+      <height>25</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="inputImg">
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="outputImg">
-       <property name="autoFillBackground">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <layout class="QHBoxLayout" name="horizontalLayout_2"/>
+   </widget>
+   <widget class="QLabel" name="outputImg">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>40</y>
+      <width>320</width>
+      <height>240</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="inputImg">
+    <property name="geometry">
+     <rect>
+      <x>9</x>
+      <y>39</y>
+      <width>320</width>
+      <height>240</height>
+     </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>true</bool>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>390</y>
-      <width>87</width>
-      <height>77</height>
+      <x>91</x>
+      <y>341</y>
+      <width>81</width>
+      <height>50</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QCheckBox" name="futureButtom">
+       <property name="text">
+        <string>Future</string>
+       </property>
+      </widget>
+     </item>
      <item>
       <widget class="QCheckBox" name="pastButtom">
        <property name="text">
@@ -76,39 +120,92 @@
        </property>
       </widget>
      </item>
+    </layout>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>0</y>
+      <width>241</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QCheckBox" name="futureButtom">
+      <widget class="QLabel" name="label_3">
        <property name="text">
-        <string>Future</string>
+        <string>speed</string>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="checkBox_3">
-       <property name="text">
-        <string>CheckBox</string>
+      <widget class="QSlider" name="speedSlider">
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="value">
+        <number>50</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <zorder>inputImg</zorder>
-   <zorder>outputImg</zorder>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>0</y>
+      <width>291</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="pauseButtom">
+       <property name="text">
+        <string>Pause</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="restartButtom">
+       <property name="text">
+        <string>Restart</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>ChangeVideo</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
    <zorder>logText</zorder>
-   <zorder>FutureButtom</zorder>
-   <zorder>pastButtom</zorder>
-   <zorder>radioButton_3</zorder>
-   <zorder>inputImg</zorder>
-   <zorder>pastButtom</zorder>
-   <zorder>futureButtom</zorder>
-   <zorder>checkBox_3</zorder>
+   <zorder>pauseButtom</zorder>
+   <zorder>restartButtom</zorder>
+   <zorder>pauseButtom</zorder>
+   <zorder>restartButtom</zorder>
+   <zorder>label</zorder>
+   <zorder>label_2</zorder>
+   <zorder>speedSlider</zorder>
+   <zorder>label_3</zorder>
+   <zorder>pushButton</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>923</width>
+     <width>851</width>
      <height>20</height>
     </rect>
    </property>
