--- a/UnB2013/PVC/ProjetoFinal/ProjetoFinal/QtClasses/UI/UserInterface.ui
+++ b/UnB2013/PVC/ProjetoFinal/ProjetoFinal/QtClasses/UI/UserInterface.ui
@@ -50,7 +50,7 @@
      <string>video processado</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>110</x>
@@ -93,7 +93,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>91</x>
@@ -122,7 +122,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>500</x>
@@ -154,7 +154,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>190</x>
@@ -187,18 +187,43 @@
      </item>
     </layout>
    </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>0</y>
+      <width>80</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Encerrar</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="runDemoKalman">
+    <property name="geometry">
+     <rect>
+      <x>710</x>
+      <y>70</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>RunDemoKalman</string>
+    </property>
+   </widget>
+   <zorder>outputImg</zorder>
+   <zorder>inputImg</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>logText</zorder>
-   <zorder>pauseButtom</zorder>
-   <zorder>restartButtom</zorder>
-   <zorder>pauseButtom</zorder>
-   <zorder>restartButtom</zorder>
    <zorder>label</zorder>
    <zorder>label_2</zorder>
-   <zorder>speedSlider</zorder>
-   <zorder>label_3</zorder>
-   <zorder>pushButton</zorder>
+   <zorder>pushButton_2</zorder>
+   <zorder>runDemoKalman</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
