--- a/UnB2013/PVC/ProjetoFinal/ProjetoFinal/UI/UserInterface.ui
+++ b/UnB2013/PVC/ProjetoFinal/ProjetoFinal/UI/UserInterface.ui
@@ -127,9 +127,9 @@
    <widget class="QPushButton" name="runDemoKalman">
     <property name="geometry">
      <rect>
-      <x>710</x>
-      <y>70</y>
-      <width>121</width>
+      <x>711</x>
+      <y>72</y>
+      <width>112</width>
       <height>23</height>
      </rect>
     </property>
@@ -218,7 +218,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>670</x>
@@ -300,7 +300,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>670</x>
@@ -322,7 +322,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>31</x>
@@ -362,6 +362,32 @@
      </item>
     </layout>
    </widget>
+   <widget class="QLabel" name="GlobalModeLabel">
+    <property name="geometry">
+     <rect>
+      <x>911</x>
+      <y>71</y>
+      <width>39</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>mode:</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="GlobalModeOption">
+    <property name="geometry">
+     <rect>
+      <x>956</x>
+      <y>71</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
@@ -373,18 +399,8 @@
    <zorder>runDemoKalman</zorder>
    <zorder>videoFileOption</zorder>
    <zorder>clearButtom</zorder>
-   <zorder>ColorMinChannelOption</zorder>
-   <zorder>ColorMinLabel</zorder>
-   <zorder>ColorMinChannelSlider</zorder>
-   <zorder>ColorMinValue</zorder>
-   <zorder>layoutWidget_2</zorder>
-   <zorder>DefineColorLabel</zorder>
-   <zorder>DefinedColorOption</zorder>
-   <zorder>DefineColorButtom</zorder>
-   <zorder>BackGroundSubButtom</zorder>
-   <zorder>ColorDetectionButtom</zorder>
-   <zorder>BorrarButtom</zorder>
-   <zorder>SizeOfGaussian</zorder>
+   <zorder>GlobalModeLabel</zorder>
+   <zorder>GlobalModeOption</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
