--- a/UnB2013/PVC/ProjetoFinal/ProjetoFinal/UI/UserInterface.ui
+++ b/UnB2013/PVC/ProjetoFinal/ProjetoFinal/UI/UserInterface.ui
@@ -385,6 +385,58 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="ClearPastButtom">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>400</y>
+      <width>80</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear Past</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>690</x>
+      <y>270</y>
+      <width>321</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QLabel" name="ColorDetectionThresholdLabel">
+       <property name="text">
+        <string>ColorDetectionTh</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="ColorDetectionThresholdSliderValue">
+       <property name="text">
+        <string>30</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QSlider" name="ColorDetectionThresholdSlider">
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="value">
+        <number>30</number>
+       </property>
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>layoutWidget</zorder>
@@ -401,6 +453,10 @@
    <zorder>clearButtom</zorder>
    <zorder>GlobalModeLabel</zorder>
    <zorder>GlobalModeOption</zorder>
+   <zorder>ClearPastButtom</zorder>
+   <zorder>ColorDetectionThresholdLabel</zorder>
+   <zorder>ColorDetectionThresholdSlider</zorder>
+   <zorder>ColorDetectionThresholdSliderValue</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
