--- a/Projects/Wendynator/Wendynator/mainwindow.ui
+++ b/Projects/Wendynator/Wendynator/mainwindow.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>559</width>
-    <height>369</height>
+    <width>497</width>
+    <height>537</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Wendynator</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QTextEdit" name="logText">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>190</y>
+      <x>10</x>
+      <y>340</y>
       <width>451</width>
       <height>121</height>
      </rect>
@@ -30,10 +30,10 @@
    <widget class="QLabel" name="InputImg">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>0</y>
-      <width>301</width>
-      <height>181</height>
+      <x>20</x>
+      <y>10</y>
+      <width>391</width>
+      <height>311</height>
      </rect>
     </property>
     <property name="text">
@@ -46,7 +46,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>559</width>
+     <width>497</width>
      <height>19</height>
     </rect>
    </property>
