--- a/Projects/Wendynator/Wendynator/MainWindow/mainwindow.ui
+++ b/Projects/Wendynator/Wendynator/MainWindow/mainwindow.ui
@@ -75,6 +75,19 @@
      </item>
     </layout>
    </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>390</y>
+      <width>91</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear Log</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
