--- a/Projects/Wendynator/Wendynator/Sensors/ColorSensor/ColorSensorConfig/ColorSensorConfig.ui
+++ b/Projects/Wendynator/Wendynator/Sensors/ColorSensor/ColorSensorConfig/ColorSensorConfig.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>549</width>
-    <height>409</height>
+    <width>641</width>
+    <height>432</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -171,7 +171,7 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
-     <widget class="QLabel" name="inputImgLabel">
+     <widget class="QLabel" name="inputImg">
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
@@ -215,13 +215,6 @@
        <widget class="QComboBox" name="DefinedColorOption"/>
       </item>
      </layout>
-    </item>
-    <item>
-     <widget class="QPushButton" name="okButtom_2">
-      <property name="text">
-       <string>set</string>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
