--- a/UnB2014/ArtigoKalman/Code/OracleKalman/widget.ui
+++ b/UnB2014/ArtigoKalman/Code/OracleKalman/widget.ui
@@ -399,6 +399,19 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="gnuplotButton">
+   <property name="geometry">
+    <rect>
+     <x>490</x>
+     <y>340</y>
+     <width>80</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Gnuplot</string>
+   </property>
+  </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
