--- a/UnB2014/ArtigoKalman/Code/OracleKalman/widget.ui
+++ b/UnB2014/ArtigoKalman/Code/OracleKalman/widget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1234</width>
-    <height>536</height>
+    <width>1312</width>
+    <height>602</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -479,6 +479,38 @@
    <property name="text">
     <string>record step</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>1030</x>
+     <y>400</y>
+     <width>271</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_13">
+    <item>
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>n de tomadas a tirar</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QSlider" name="horizontalSlider">
+      <property name="maximum">
+       <number>100</number>
+      </property>
+      <property name="value">
+       <number>30</number>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
